@@ -27,30 +27,3 @@ schg_dun01,0,0,0,0	monster	Hell Apocalypse	1978,20,0,0,0
 schg_dun01,0,0,0,0	monster	Zakudam	1979,20,0,0,0
 schg_dun01,0,0,0,0	monster	Heavy Metaling	1977,15,0,0,0
 schg_dun01,0,0,0,0	monster	Cobalt Mineral	1976,15,0,0,0
-//===== eAthena Script =======================================
-//= Guild Dungeons Monster Spawn Script
-//===== By: ==================================================
-//= Athena (1.0)
-//===== Current Version: =====================================
-//= 1.0
-//===== Compatible With: =====================================
-//= Any Athena Version
-//===== Additional Comments: =================================
-//= 1.0 First version
-//============================================================
-
-//==================================================
-// arug_dun01 - Arunafeltz Guild Dungeon
-//==================================================
-arug_dun01,0,0,0,0	monster	Aunoe	1796,50,0,0,0
-arug_dun01,0,0,0,0	monster	Fanat	1797,50,0,0,0
-arug_dun01,0,0,0,0	monster	Banshee Master	1974,40,0,0,0
-arug_dun01,0,0,0,0	monster	Beholder Master	1975,40,0,0,0
-
-//==================================================
-// schg_dun01 - Schwartzvald Guild Dungeon
-//==================================================
-schg_dun01,0,0,0,0	monster	Cobalt Mineral	1976,30,0,0,0
-schg_dun01,0,0,0,0	monster	Hell Apocalypse	1978,35,0,0,0
-schg_dun01,0,0,0,0	monster	Heavy Metaling	1977,30,0,0,0
-schg_dun01,0,0,0,0	monster	Zakudam	1979,30,0,0,0
